[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archaeal-sgrna-designer"
version = "0.1.2"
description = "sgRNA design for archaeal CRISPR-Cas9 editing (Methanosarcina and relatives)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Cameron Pham", email = "cameron.pham@yahoo.com" }
]
maintainers = [
    { name = "Cameron Pham", email = "cameron.pham@yahoo.com" }
]
keywords = ["CRISPR", "archaea", "sgRNA", "Methanosarcina", "methanogenesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
biopython = ["biopython>=1.81"]

[project.urls]
Homepage = "https://github.com/CameronCat/archaeal-sgrna-designer"
"Bug Tracker" = "https://github.com/CameronCat/archaeal-sgrna-designer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["archaeal_sgrna*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["archaeal_sgrna"]